@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (January 26, 2026)"
-.Dd January 26, 2026
+.\" Modified by Ken DEGUCHI (February  9, 2026)"
+.Dd February  9, 2026
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
@@ -143,6 +143,17 @@ This option may fail when there are dependency problems
 Especially, be careful when using
 .Fl a
 option at the same time.
+.Pp
+When package
+.Ar foo
+and
+.Ar bar
+have loop dependencies, specifying
+.Fl x Ar foo
+excludes
+.Ar foo
+from the dependency check using the option
+.Fl dd .
 .Pp
 .It Fl \-debug
 Debug mode.
@@ -309,6 +320,17 @@ This may be useful when there are errors due to a mixture of old and new librari
 .Pp
 .It Fl x Ar glob
 Do not replace packages matching the specified glob pattern.
+.Pp
+When package
+.Ar foo
+and
+.Ar bar
+have loop dependencies, specifying
+.Fl x Ar foo
+excludes
+.Ar foo
+from the dependency check using the option
+.Fl dd .
 .Pp
 .El
 .Sh VARIABLES
